# azure-iot-scenarios

./: README.md
.github/workflows/: deploy.yml  slides.yml
scenarios/1_grafana-prometheus/: Dockerfile  README.md  main.py  pyproject.toml
scenarios/2_iot-hub-messaging/: .gitignore  README.md
scenarios/2_iot-hub-messaging/edge/: capture_image.py  receive_direct_method.py  requirements.txt  show_video.py  upload_file.py  upload_image_direct_method.py
scenarios/2_iot-hub-messaging/functions/: .env.sample  deploy-azure-functions.sh  function_app.py  requirements.txt
scenarios/2_iot-hub-messaging/functions/wrapper_function/: __init__.py  blobs.py  iothubs.py  openais.py
scenarios/2_iot-hub-messaging/infra/: Makefile  main.bicep  main.parameters.bicepparam
scenarios/2_iot-hub-messaging/infra/modules/: cosmosDb.bicep
scenarios/3_event-grid-mqtt-messaging/: .env.eg.sample  .env.sample  .gitignore  Makefile  README.md
scenarios/3_event-grid-mqtt-messaging/go/: go.mod  go.sum  main.go
scenarios/3_event-grid-mqtt-messaging/go/cmd/: getstarted.go  root.go
scenarios/3_event-grid-mqtt-messaging/go/cmd/conn/: settings.go
scenarios/3_event-grid-mqtt-messaging/infra/: Makefile  main.bicep  main.parameters.bicepparam
scenarios/4_iot-edge-messaging/: README.md
scenarios/4_iot-edge-messaging/infra/: Makefile  main.bicep
scenarios/4_iot-edge-messaging/scripts/: install-iot-edge.sh
slides/: README.md  package-lock.json  package.json
