[tool.poetry]
name = "grafana-prometheus"
version = "0.1.0"
description = ""
authors = ["ks6088ts <ks6088ts@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
prometheus-client = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
